--- a/docs/面经.md
+++ b/docs/面经.md
@@ -1,6 +1,6 @@
 # 面试知识点复习清单整理（持续更新ing）
 * [自我介绍](notes/self_introduction.md)
-* 谈谈Java内存模型
+* [谈谈Java内存模型](notes/谈谈Java内存模型.md)
 * HashMap 和 HashTable 的区别（1.线程2.存储？）
 * 谈谈JVM的垃圾回收算法，尽可能详细
 * 说说AOP有哪几种实现（1.动态代理：jdk自带的动态代理、cglib动态代理）
